Add install instructions and fix DevContainer

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,3 +1,5 @@
 FROM mcr.microsoft.com/devcontainers/base:alpine-3.18
 
-RUN apk add --no-cache dotnet6-sdk xmlstarlet
+RUN apk add --no-cache dotnet6-sdk xmlstarlet xdg-utils
+
+RUN dotnet tool install --global Microsoft.PowerApps.CLI.Tool
