--- a/.github/workflows/upload_main.yml
+++ b/.github/workflows/upload_main.yml
@@ -31,11 +31,10 @@ jobs:
       # Configure
       - name: Configure auths
         run: |
-          pac auth create --name CalStateLA --url https://csula.onmicrosoft.com --applicationId $application_id --clientSecret $client_secret --tenant $tenant_id
+          mkdir -p ~/.local/share/Microsoft/PowerAppsCli
+          echo "$auth_json" > ~/.local/share/Microsoft/PowerAppsCli/authprofiles_v2.json
         env:
-          application_id: ${{ secrets.PAC_APPLICATION_ID }}
-          client_secret: ${{ secrets.PAC_CLIENT_SECRET }}
-          tenant_id: ${{ secrets.PAC_TENANT }}
+          auth_json: ${{ secrets.MAIN_UPLOAD_AUTH }}
 
       # Upload
       - name: Package Solution
