Disable auto-upload in GH Action

--- a/.github/workflows/upload_main.yml
+++ b/.github/workflows/upload_main.yml
@@ -29,15 +29,20 @@ jobs:
         run: dotnet tool install --global Microsoft.PowerApps.CLI.Tool
 
       # Configure
-      - name: Configure auths
-        run: |
-          mkdir -p ~/.local/share/Microsoft/PowerAppsCli
-          echo "$auth_json" > ~/.local/share/Microsoft/PowerAppsCli/authprofiles_v2.json
-        env:
-          auth_json: ${{ secrets.MAIN_UPLOAD_AUTH }}
+      # - name: Configure auths
+      #   run: |
+      #     mkdir -p ~/.local/share/Microsoft/PowerAppsCli
+      #     echo "$auth_json" > ~/.local/share/Microsoft/PowerAppsCli/authprofiles_v2.json
+      #   env:
+      #     auth_json: ${{ secrets.MAIN_UPLOAD_AUTH }}
 
       # Upload
       - name: Package Solution
         run: pac solution pack -f ./src -pca -z package.zip
-      - name: Upload Solution
-        run: pac solution import -p package.zip
+      # - name: Upload Solution
+      #   run: pac solution import -p package.zip
+      - name: Upload Package to GH Actions
+        uses: actions/upload-artifact@v3
+        with:
+          name: Solution
+          path: package.zip
