Remove auto upload from solution build

--- a/.github/workflows/upload_main.yml
+++ b/.github/workflows/upload_main.yml
@@ -39,13 +39,14 @@ jobs:
           path: package.zip
 
       # Upload to PowerPlatform
-      - name: Configure auths
-        run: |
-          pac auth create --name CalStateLA --applicationId $application_id --clientSecret $client_secret --tenant $tenant_id
-          pac auth select --name CalStateLA
-        env:
-          application_id: ${{ secrets.PAC_APPLICATION_ID }}
-          client_secret: ${{ secrets.PAC_CLIENT_SECRET }}
-          tenant_id: ${{ secrets.PAC_TENANT }}
-      - name: Upload Solution
-        run: pac solution import -p package.zip
+      # - name: Configure auths
+      #   run: |
+      #     pac auth create --name CalStateLA --applicationId $application_id --clientSecret $client_secret --tenant $tenant_id --environment  $environment_id
+      #     pac auth select --name CalStateLA
+      #   env:
+      #     application_id: ${{ secrets.PAC_APPLICATION_ID }}
+      #     client_secret: ${{ secrets.PAC_CLIENT_SECRET }}
+      #     tenant_id: ${{ secrets.PAC_TENANT }}
+      #     environment_id: ${{ secrets.PAC_ENVIRONMENT }}
+      # - name: Upload Solution
+      #   run: pac solution import -p package.zip
